<?xml version="1.0"?>
<package>
  <name>guardian_terabot_gazebo</name>
  <version>1.0.0</version>
  <description>The guardian_terabot_gazebo package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/terabot_control</url> -->

  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>guardian_terabot_description</build_depend>
  <run_depend>guardian_terabot_description</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
